--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
         <!-------------------------- My scripts -------------------------->       
         <script src="js/gen_menu.js" type="text/javascript"></script>
         <script src="js/refresh_repair.js" type="text/javascript"></script>
+        <script src="js/refresh_repair(old).js" type="text/javascript"></script>
         <script src="js/add_prods.js" type="text/javascript"></script>
         <script src="js/add_user.js" type="text/javascript"></script>
         <script src="js/add_symptom.js" type="text/javascript"></script>
@@ -413,8 +414,8 @@
             }
                 </script>-->
                 <script language="JavaScript">
-                    RefreshRepair ()
-                    var myRef = setInterval(function(){ RefreshRepair () }, 15000);
+                    RefreshRepair_old ();
+                    var myRef = setInterval(function(){ RefreshRepair_old () }, 15000);
                 </script>
         
         <script type="text/javascript">
