--- a/content/info_index.html
+++ b/content/info_index.html
@@ -147,7 +147,7 @@ $.getJSON('JsonData/month.php',function (data) {
                 </div><!-- /.box-header -->
                 <div class="box-body">
                     <div class='col-md-3 col-md-offset-9 form-group'><select name='yearS' class='form-control' id='yearS'></select></div>
-                    <center>รายงานการแจ้งซ่อม : ทั้งหมด&nbsp;&nbsp;ปีงบประมาณ : <b id="year"></b></center>
+                    <center>รายงานการแจ้งซ่อม(คอมพิวเตอร์) : ทั้งหมด&nbsp;&nbsp;ปีงบประมาณ : <b id="year"></b></center>
                     <div class="col-lg-12"><div id="container1" style="width: 100%; height: 100%; margin: 0 auto"></div><div class="col-md-1 col-md-offset-11">
                       <a href="#" id="detialGR01" onclick="SymptomGroup('index_content')" class='btn btn-success btn-sm' title="จำนวนการแจ้งซ่อมจำแนกตามกลุ่มสาเหตุการเสีย แยกรายเดือน">รายละเอียด</a></div></div>
                     <div class="col-lg-7"><div id="container2" style="width: 100%; height: 100%; margin: 0 auto"></div></div>
