--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         <script src="js/genHisRepair.js" type="text/javascript"></script> 
         <script src="js/store_modal.js" type="text/javascript"></script> 
         <script src="js/rec_dev.js" type="text/javascript"></script> 
+        <script src="js/recT_dev.js" type="text/javascript"></script>
         <script src="js/detail_dev.js" type="text/javascript"></script>
         <script src="js/add_prog.js" type="text/javascript"></script>
         <script src="js/report_symptom_group.js" type="text/javascript"></script>
