--- a/content/list_sendT_result.html
+++ b/content/list_sendT_result.html
@@ -53,7 +53,7 @@
   var modal = $(this)
   modal.find('.modal-title').text('ผลการส่งซ่อมภายนอก ใบแจ้งซ่อม : ลำดับที่ ' + recipient)
   
-   $.getJSON('JsonData/sendrepairT_Data.php',{data: recipient},function (data) {
+   $.getJSON('JsonData/sendrepairT_Data.php',{data: recipient},function (data) { console.log(data)
         $('span#receiveRer_detail').empty().append("ใบแจ้งซ่อม : "+data.repairT_id+"  &nbsp;&nbsp;ใบส่งซ่อมลำดับที่ : "+data.send_id+"  &nbsp;&nbsp;เลขครุภัณฑ์ : "+data.pd_number+"<br>"
                             +"ร้านที่ซ่อม : "+data.comp_name+"  &nbsp;&nbsp;วันที่ส่ง : "+data.send_date+"<br>"
                             +"อาการ : <b style='color: red;'>"+data.repair_detail+"</b><hr>");
