update V.2.1 เพิ่มสถานที่ 27/10/63

--- a/content/list_repairT_result.html
+++ b/content/list_repairT_result.html
@@ -58,7 +58,7 @@
                 $('#DGimage').empty().attr('src', 'DG_imgs/'+data.dg_img);
             }
         $('span#detail').empty().append("ผู้แจ้งซ่อม : "+data.inform+"  &nbsp;&nbsp;งาน : "+data.depName+"<br>"
-        +"สถานที่ : "+data.place_name+"<br>"
+        +"บริเวณ : "+data.place_name+"<br>สถานที่ : "+data.place+"<br>"
                             +"เลขครุภัณฑ์/อาการ/ความต้องการ : "+data.pd_number+"  <br>หมายเหตุ : "+data.note+"<br>"
                             +"รายละเอียดอาการ : "+data.symptom+"<br>วันที่แจ้ง : "+data.repair_date+" &nbsp;&nbsp;<b style='color: red;'>"+data.vital+"</b>  &nbsp;&nbsp;วันที่รับใบแจ้ง : "+data.receive_date);
 
