--- a/content/genQRcode.html
+++ b/content/genQRcode.html
@@ -135,7 +135,7 @@ $.getJSON('../JsonData/data_prods.php', function (GD) {
                 
                     if (val[I].value != '') {
                         $("tr#row"+i).append("<td width='33%' height='75' valign='top' align='center'><span class='blockQR' align='center' valign='top' id='qr-example" + I + "'></span><span align='center' id='qr-label" + I + "'></span></td>");
-                        $('#qr-example' + I).empty().qrcode({ width: $('.qr-size').val(), height: $('.qr-size').val(), text: val[I].value });
+                        $('#qr-example' + I).empty().qrcode({ width: $('.qr-size').val(), height: $('.qr-size').val(), text: "http://1.179.191.130/maintenance/login_pageQR.html?pd_id="+val[I].value });
                         $.getJSON('../JsonData/detail_prodsQR.php', { data: val[I].value ,data2:I }, function (data) {
                             $("#qr-label" + data.count).append(data.pd_number+"<br>"+data.name+"<br>"+data.depName);
                         });
