--- a/content/genQRcode(old).html
+++ b/content/genQRcode(old).html
@@ -130,20 +130,20 @@
                 $("#genQRCode").show();
                 $("#div_print").empty().append($(" <button id='clear' class='btn btn-danger'>clear data</button> <button id='print' class='btn btn-primary'>พิมพ์ข้อมูล</button>"))
                 var val = $("#frmgenQR").serializeArray();
-            
+                $.getJSON('../JsonData/up_header.php',function (data) { 
                 for(var i=0;i < val.length;i++){
                     if (val[i].value != '') {
                             $("#genQRCode").append("<table id='tableId' width='100%'><tbody id='tb"+i+"'></tbody></table>");   
                         $("tbody#tb"+i).append("<tr><td width='100%' valign='top' align='center'><br><span class='blockQR' align='center' valign='top' id='qr-example" + i + "'></span><span align='center' id='qr-label" + i + "'></span></td></tr>");
-                        $('#qr-example' + i).empty().qrcode({ width: $('.qr-size').val(), height: $('.qr-size').val(), text: "http://1.179.191.130/maintenance/login_pageQR.html?pd_id="+val[i].value });
+                        $('#qr-example' + i).empty().qrcode({ width: $('.qr-size').val(), height: $('.qr-size').val(), text: data.url+"maintenance/login_pageQR.html?pd_id="+val[i].value });
                         $.getJSON('../JsonData/detail_prodsQR.php', { data: val[i].value ,data2:i }, function (data) {
-                            $("#qr-label" + data.count).empty().append(data.pd_number+"<br>"+data.name+"<br>"+data.depName);
+                            $("#qr-label" + data.count).empty().append(data.pd_number+"<br>"+data.name+"<br>"+data.depName+"<span style='font-size:9px'> ...(NewQR)</span>");
                         });
                     } else {
                         alert("โปรดใส่เลขครุภัณฑ์ใน list ที่" + (i + 1) + " ด้วยครับ !");
                     }
                 }
-
+            });
                  $("button#print").click(function (e) {
                         e.preventDefault();
                         window.print()
